--- a/code.ipynb
+++ b/code.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "44ef0abf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\user\\anaconda3\\envs\\pyt_env\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ea148828",
    "metadata": {},
    "outputs": [
@@ -108,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "764e7240",
    "metadata": {},
    "outputs": [],
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "24976a2d",
    "metadata": {},
    "outputs": [],
@@ -193,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "adf46ffc",
    "metadata": {},
    "outputs": [],
@@ -273,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a13b151c",
    "metadata": {},
    "outputs": [],
@@ -327,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b438391f",
    "metadata": {},
    "outputs": [],
@@ -390,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "139ae8f4",
    "metadata": {},
    "outputs": [],
@@ -471,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f462e888",
    "metadata": {},
    "outputs": [],
@@ -560,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a88e7f73",
    "metadata": {},
    "outputs": [],
@@ -693,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2a1308d0",
    "metadata": {},
    "outputs": [],
@@ -721,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "9f14f4b3",
    "metadata": {},
    "outputs": [],
@@ -766,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "d6b971c6",
    "metadata": {},
    "outputs": [],
@@ -805,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "9ecaa56c",
    "metadata": {},
    "outputs": [],
@@ -912,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "9ecf7837",
    "metadata": {},
    "outputs": [],
@@ -1008,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "eda951b3",
    "metadata": {},
    "outputs": [],
@@ -1048,7 +1057,16 @@
    "execution_count": null,
    "id": "8a4b4ef3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid non-printable character U+00A0 (934910364.py, line 163)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[17], line 163\u001b[1;36m\u001b[0m\n\u001b[1;33m    return model, (train_losses, val_losses, train_accs, val_accs)\u001b[0m\n\u001b[1;37m                                                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid non-printable character U+00A0\n"
+     ]
+    }
+   ],
    "source": [
     "def train_neural_network(X_train, y_train, X_test, y_test, input_size, batch_size=64, \n",
     "                         epochs=30, learning_rate=0.001, patience=7):\n",
@@ -1212,12 +1230,12 @@
     "    plt.savefig(os.path.join(FIGURES_DIR, 'neural_network_training_curves.png'))\n",
     "    plt.show()\n",
     "    \n",
-    "    return model, (train_losses, val_losses, train_accs, val_accs)"
+    "    return model, (train_losses, val_losses, train_accs, val_accs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "5ea4eb0f",
    "metadata": {},
    "outputs": [],
@@ -1311,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "ede5c46c",
    "metadata": {},
    "outputs": [],
@@ -1348,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "2fc072c8",
    "metadata": {},
    "outputs": [
